--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,4 +10,19 @@
 body {
     font-family: Lato, sans-serif;
     font-weight:  300;
+    color: #3a3a3a;
+}
+
+/* headings and logo */
+
+h1, h2 {
+    font-family: Oswald, sans-serfi;
+    text-transform: uppercase;
+    color: #252525;
+    letter-spacing: 4px;
+}
+
+#logo {
+    float: left;
+    font-size: 280%;
 }
