--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 * {
     margin: 0;
@@ -9,27 +8,34 @@
 
 body {
     font-family: Lato, sans-serif;
-    font-weight:  300;
+    font-weight: 300;
     color: #3a3a3a;
 }
 
 /* headings and logo */
 
 h1, h2 {
-    font-family: Oswald, sans-serfi;
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
-    color: #252525;
     letter-spacing: 4px;
+    color: #252525;
 }
 
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
+
+/* navigation links */
 
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height: 75px;
 }
 
 #menu li {
@@ -43,10 +49,6 @@ h1, h2 {
     color: inherit;
 }
 
-#menu, #logo {
-    line-height: 75px;
-}
-
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
 }
@@ -55,23 +57,32 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-#hero-image {
-    height: 600px;
-    width: 100%;
-    background: url('../images/hero-image.webp') no-repeat center center;
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-}
+/* hero image and cover text */
 
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
 
+    position: relative;
 }
 
-/* creates the lovel of zoom for hero image */
+#cover-text, #cover-text h2 {
+    color: #fff;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero-image.webp') no-repeat center center;
+
+    /* animates zoom effect on loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* creates the level of zoom for hero image */
 @keyframes hero-zoom {
     from{
         transform: scale(1);
@@ -79,4 +90,49 @@ h1, h2 {
     to{
         transform: scale(1.1);
     }
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
+}
+
+
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: green;
 }
